--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
                     <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
-                <div class="home__img">    
-                    <img src="assets/img/perfil.png" alt="">
+                <div class="home__img">
+                    <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <mask id="mask0" mask-type="alpha">
+                            <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
+                        </mask>
+                        <g mask="url(#mask0)">
+                            <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
+                            <image class="home__blob-img" x="50" y="60" href="assets/img/perfil.png"/>
+                        </g>
+                    </svg>
                 </div>
             </section>
 
@@ -140,24 +148,24 @@
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
-                    <div class="work__img">
+                    <a href="" class="work__img">
                         <img src="assets/img/work1.jpg" alt="">
-                    </div>
-                    <div class="work__img">
+                    </a>
+                    <a href="" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
-                    </div>
-                    <div class="work__img">
+                    </a>
+                    <a href="" class="work__img">
                         <img src="assets/img/work3.jpg" alt="">
-                    </div>
-                    <div class="work__img">
+                    </a>
+                    <a href="" class="work__img">
                         <img src="assets/img/work4.jpg" alt="">
-                    </div>
-                    <div class="work__img">
+                    </a>
+                    <a href="" class="work__img">
                         <img src="assets/img/work5.jpg" alt="">
-                    </div>
-                    <div class="work__img">
+                    </a>
+                    <a href="" class="work__img">
                         <img src="assets/img/work6.jpg" alt="">
-                    </div>
+                    </a>
                 </div>
             </section>
 
@@ -184,7 +192,7 @@
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p>&#169; 2020 copyright all right reserved</p>
+            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
         </footer>
 
 
