change of image

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="">
+                        <img src="assets/img/brian.jpg" alt="">
                     </div>
                     
                     <div>
