have added animation in the background

--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
                 </div>
             </section>
         </main>
-
+        <section>
+            <div class="wrap-2"><canvas id="liquid" ></canvas></div>
+        </section>
         <!--===== FOOTER =====-->
         <footer class="footer">
             <p class="footer__title">Marlon</p>
