--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Team LiveServer</title>
     </head>
     <body>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">Textify</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">Text to Sign Language Converter</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Sign Language to Text Converter</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">Voice To Sign Language</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Learn Sign Language</a></li>
                     </ul>
                 </div>
 
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hey,<br>Navigate using <br>header<br><span class="home__title-color">to convert now!</span></h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
