--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">Text to Sign Language Converter</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Sign Language to Text Converter</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">Text to Sign Language</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Sign Language to Text</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Voice To Sign Language</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Learn Sign Language</a></li>
                     </ul>
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hey,<br>Navigate using <br>header<br><span class="home__title-color">to convert now!</span></h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="#" class="button">Click to create google assistant shortcut</a>
                 </div>
 
                 <div class="home__social">
