--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Marlon</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -82,14 +82,36 @@
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
+                <P class="skills__text">
+                    SKILSS
+                </P>
+                <div class="skills__container bd-grid">
                     <a href="" class="skills__img">
                         <img src="assets/img/python_logo_png.png" alt="">
                     </a>
                     <a href="" class="skills__img">
-                        <img src="assets/img/python_logo_png.png" alt="">
+                        <img src="assets/img/django_logo.png" alt="">
                     </a>
                     <a href="" class="skills__img">
-                        <img src="assets/img/python_logo_png.png" alt="">
+                        <img src="assets/img/postgresql_logo.png" alt="">
+                    </a>
+                    <a href="" class="skills__img">
+                        <img src="assets/img/microsoft-sql-server.png" alt="">
+                    </a>
+                    <a href="" class="skills__img">
+                        <img src="assets/img/git_logo.png" alt="">
+                    </a>
+                    <a href="" class="skills__img">
+                        <img src="assets/img/docker_logo.png" alt="">
+                    </a>
+                    <a href="" class="skills__img">
+                        <img src="assets/img/kubernetes_logo.png" alt="">
+                    </a>
+                    <a href="" class="skills__img">
+                        <img src="assets/img/html_css_logo.jpeg" alt="">
+                    </a>
+                    <a href="" class="skills__img">
+                        <img src="assets/img/Microsoft-Office-logo.png" alt="">
                     </a>
                 </div>
             </section>
