--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
                 <P class="skills__text">
-                    SKILSS
+                    Python, Django, PostgreSQL, Microsof SQL Server, Git, GitHub, Docker, Kubernetes, HTML, CSS, Delphi, Pascal, Office apps.
                 </P>
                 <div class="skills__container bd-grid">
                     <a href="" class="skills__img">
