--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">Ahmet</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -39,7 +39,10 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Ahmet</span><br> Backend Engineer
+                        <br><span class="home__title-color">or</span>
+                        <br>Python Developer
+                    </h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
@@ -82,9 +85,9 @@
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills</h2>
-                <P class="skills__text">
+                <h2 class="skills__subtitle">
                     Python, Django, PostgreSQL, Microsof SQL Server, Git, GitHub, Docker, Kubernetes, HTML, CSS, Delphi, Pascal, Office apps.
-                </P>
+                </h2>
                 <div class="skills__container bd-grid">
                     <a href="" class="skills__img">
                         <img src="assets/img/python_logo_png.png" alt="">
@@ -121,7 +124,7 @@
             <ul class="timeline">
                 <!-- Item 1 -->
                 <li>
-                  <div class="direction-r skills__img">
+                  <div class="direction-r">
                     <div class="flag-wrapper">
                       <span class="hexa"></span>
                       <span class="flag">Lorem ipsum.</span>
@@ -173,13 +176,12 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Marlon</p>
+            <p class="footer__title">Ahmet Col</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
         </footer>
 
 
