--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/ahmetbahadircol/?locale=en_US" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href=https://github.com/ahmetbahadircol class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
-                <div class="home__img">
+                <!-- <div class="home__img">
                     <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <mask id="mask0" mask-type="alpha">
                             <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
@@ -62,7 +62,7 @@
                             <image class="home__blob-img" x="50" y="60" href="assets/img/kubernetes_logo.png"/>
                         </g>
                     </svg>
-                </div>
+                </div> -->
             </section>
 
             <!--===== ABOUT =====-->
@@ -214,13 +214,22 @@
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
+                <div class="contact__block bd-grid">
+                    <div class="contact__title">
+                        <b>Tel:</b><span> +90 5523500602</span>                       
+                    </div>
+                    <div class="contact__title">
+                        <b>E-mail:</b><span> ahmetbahadircol@gmail.com</span>                       
+                    </div>
+                    <!-- <div class="contact__details">568464868</div> -->
+                </div>
 
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Enviar" class="contact__button button">
+                        <input type="button" value="Send" class="contact__button button">
                     </form>
                 </div>
             </section>
@@ -230,9 +239,9 @@
         <footer class="footer">
             <p class="footer__title">Ahmet Col</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+                <a href=https://github.com/ahmetbahadircol class="footer__icon"><i class='bx bxl-github' ></i></a>
+                <a href=https://www.instagram.com/bahadirahmetcol/ class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.linkedin.com/in/ahmetbahadircol/?locale=en_US" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
             </div>
         </footer>
 
