--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Marlon</a>
+                    <a href="#" class="nav__logo">Bosco Kavisu</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bosco Kavisu</span><br> Web Designer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
@@ -73,8 +73,8 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Marlon</h2>
-                        <p class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate cum expedita quo culpa tempora, assumenda, quis fugiat ut voluptates soluta, aut earum nemo recusandae cumque perferendis! Recusandae alias accusamus atque.</p>           
+                        <h2 class="about__subtitle">I'am Bosco</h2>
+                        <p class="about__text">Am a youth leader and an enthusiastic community builder. Am an intemediate developer.</p>           
                     </div>                                   
                 </div>
             </section>
